--- a/Taylr/AVKit/Base.lproj/AVKit.storyboard
+++ b/Taylr/AVKit/Base.lproj/AVKit.storyboard
@@ -4,6 +4,12 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <mutableArray key="Cabin-Regular.ttf">
+            <string>Cabin-Regular</string>
+            <string>Cabin-Regular</string>
+        </mutableArray>
+    </customFonts>
     <scenes>
         <!--Editor View Controller-->
         <scene sceneID="6PV-4o-iXN">
@@ -229,12 +235,58 @@
                             </view>
                             <view contentMode="scaleAspectFill" translatesAutoresizingMaskIntoConstraints="NO" id="2Fw-rH-c9r" userLabel="Camera Preview" customClass="SCSwipeableFilterView">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
                             <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="zPO-M3-p5L">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="2"/>
                                 <color key="trackTintColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             </progressView>
+                            <view userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6eQ-8N-xkE" userLabel="Filter Hint">
+                                <rect key="frame" x="233" y="282" width="135" height="36"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Swipe for filters" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5OU-NY-NWO">
+                                        <rect key="frame" x="21" y="9" width="93" height="18"/>
+                                        <fontDescription key="fontDescription" name="Cabin-Regular" family="Cabin" pointSize="14"/>
+                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.40000000000000002" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="36" id="SVP-q6-Czt"/>
+                                    <constraint firstAttribute="width" constant="135" id="VZE-wW-auF"/>
+                                    <constraint firstAttribute="centerX" secondItem="5OU-NY-NWO" secondAttribute="centerX" id="YYv-Op-QWm"/>
+                                    <constraint firstAttribute="centerY" secondItem="5OU-NY-NWO" secondAttribute="centerY" id="lPB-PA-d6m"/>
+                                </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <real key="value" value="3"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </view>
+                            <view userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1Fm-0C-T8K" userLabel="Record Hint">
+                                <rect key="frame" x="234" y="435" width="135" height="56"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg-record-hint" translatesAutoresizingMaskIntoConstraints="NO" id="mMr-8b-grJ">
+                                        <rect key="frame" x="0.0" y="0.0" width="135" height="56"/>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Press and hold to record" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="115" translatesAutoresizingMaskIntoConstraints="NO" id="0kq-r8-f3m">
+                                        <rect key="frame" x="15" y="4" width="105" height="35"/>
+                                        <fontDescription key="fontDescription" name="Cabin-Regular" family="Cabin" pointSize="14"/>
+                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstItem="mMr-8b-grJ" firstAttribute="leading" secondItem="1Fm-0C-T8K" secondAttribute="leading" id="A9I-jJ-YBI"/>
+                                    <constraint firstItem="mMr-8b-grJ" firstAttribute="centerX" secondItem="0kq-r8-f3m" secondAttribute="centerX" id="Hp7-Nx-H0u"/>
+                                    <constraint firstAttribute="trailing" secondItem="mMr-8b-grJ" secondAttribute="trailing" id="Wm7-06-a1y"/>
+                                    <constraint firstAttribute="bottom" secondItem="mMr-8b-grJ" secondAttribute="bottom" id="YuL-IX-epe"/>
+                                    <constraint firstItem="mMr-8b-grJ" firstAttribute="top" secondItem="1Fm-0C-T8K" secondAttribute="top" id="fJa-kA-C3C"/>
+                                    <constraint firstItem="mMr-8b-grJ" firstAttribute="top" secondItem="0kq-r8-f3m" secondAttribute="top" constant="-4" id="tFP-ca-5zY"/>
+                                </constraints>
+                            </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="b3o-63-A2P" userLabel="Flip Camera">
                                 <rect key="frame" x="554" y="80" width="30" height="23"/>
                                 <state key="normal" image="ic-camera-switch">
@@ -262,14 +314,18 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="1Fm-0C-T8K" firstAttribute="centerX" secondItem="7s2-e5-NVe" secondAttribute="centerX" id="0Rc-9o-NN3"/>
+                            <constraint firstItem="7s2-e5-NVe" firstAttribute="top" secondItem="1Fm-0C-T8K" secondAttribute="bottom" constant="8" id="2FS-kv-1Sa"/>
                             <constraint firstItem="2Fw-rH-c9r" firstAttribute="leading" secondItem="M3U-qM-guW" secondAttribute="leading" id="3PL-62-xQu"/>
                             <constraint firstAttribute="trailing" secondItem="Pxo-oy-0Oy" secondAttribute="trailing" id="4nG-i0-P9B"/>
                             <constraint firstItem="b3o-63-A2P" firstAttribute="top" secondItem="Pxo-oy-0Oy" secondAttribute="bottom" constant="16" id="5Ai-Bw-PFb"/>
                             <constraint firstAttribute="trailing" secondItem="2Fw-rH-c9r" secondAttribute="trailing" id="72f-e3-Gy6"/>
                             <constraint firstItem="Pxo-oy-0Oy" firstAttribute="top" secondItem="M3U-qM-guW" secondAttribute="top" id="B2E-aI-Tdk"/>
+                            <constraint firstAttribute="centerY" secondItem="6eQ-8N-xkE" secondAttribute="centerY" id="Gjh-7b-JjN"/>
                             <constraint firstAttribute="bottom" secondItem="2Fw-rH-c9r" secondAttribute="bottom" id="Kgd-GR-EaK"/>
                             <constraint firstAttribute="trailing" secondItem="zPO-M3-p5L" secondAttribute="trailing" id="MPs-Sw-JzS"/>
                             <constraint firstAttribute="centerX" secondItem="7s2-e5-NVe" secondAttribute="centerX" constant="-0.5" id="Nn2-UL-EV3"/>
+                            <constraint firstAttribute="centerX" secondItem="6eQ-8N-xkE" secondAttribute="centerX" id="OfQ-Ep-ehu"/>
                             <constraint firstItem="zPO-M3-p5L" firstAttribute="top" secondItem="kas-4p-VNL" secondAttribute="bottom" id="QAi-JY-D6E"/>
                             <constraint firstItem="aym-vv-YK7" firstAttribute="top" secondItem="Pxo-oy-0Oy" secondAttribute="bottom" constant="16" id="hdK-EJ-2ac"/>
                             <constraint firstItem="aym-vv-YK7" firstAttribute="leading" secondItem="M3U-qM-guW" secondAttribute="leading" constant="16" id="lNj-ui-v4R"/>
@@ -283,9 +339,11 @@
                     <navigationItem key="navigationItem" id="cht-BE-lwq"/>
                     <nil key="simulatedStatusBarMetrics"/>
                     <connections>
+                        <outlet property="filterHint" destination="6eQ-8N-xkE" id="7k4-MP-aJv"/>
                         <outlet property="previewView" destination="2Fw-rH-c9r" id="0cp-IO-f9u"/>
                         <outlet property="progressView" destination="zPO-M3-p5L" id="MVy-cv-Da7"/>
                         <outlet property="recordButton" destination="7s2-e5-NVe" id="eOl-bu-Bic"/>
+                        <outlet property="recordHint" destination="1Fm-0C-T8K" id="n0I-L2-1Ek"/>
                         <segue destination="uPv-0o-aed" kind="show" identifier="RecorderToEditor" id="SWo-hc-sLD"/>
                     </connections>
                 </viewController>
@@ -295,6 +353,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="bg-record-hint" width="135" height="56"/>
         <image name="ic-camera-switch" width="30" height="23"/>
         <image name="ic-cancel-round" width="50" height="50"/>
         <image name="ic-flash" width="19" height="25"/>
